--- a/web/front/less/eduspeak/eduspeak.less
+++ b/web/front/less/eduspeak/eduspeak.less
@@ -13,6 +13,15 @@ img {
     width: 4em;
 }
 
+// SCREEN ---------------------------------------------------------------------------
+.row {
+  margin-right: 0;
+}
+
+.container {
+  padding-right: 0;
+}
+
 // FILTRES ---------------------------------------------------------------------------
 
 .filtres{
