--- a/web/front/less/eduspeak/profile.less
+++ b/web/front/less/eduspeak/profile.less
@@ -29,6 +29,9 @@
 		}
 		.profil-icon{
 			text-align: center;
+			.fa-user-plus {
+				color: @eduspeak-base-purple;
+			}
 		}
 		img{
 			margin-bottom: 0;
