footer et couleur bandeau bas accueil

--- a/web/front/less/eduspeak/footer.less
+++ b/web/front/less/eduspeak/footer.less
@@ -28,12 +28,6 @@
   -ms-transition: all ease 0.3s;
 }
 
-.container {
-  min-height: 100%;
-  height: auto !important;
-  height: 100%;
-  margin: 0 auto -em;
-}
 .footer {
   margin-top: 10px;
   //height: 4em;
@@ -54,7 +48,7 @@
 
 .hlink{
   font-weight: bold;
-  color:white;
+  color:rgb(85,85,85);
 }
 
 .icircle{
