--- a/web/front/less/eduspeak/eduspeak.less
+++ b/web/front/less/eduspeak/eduspeak.less
@@ -41,7 +41,7 @@ img {
 
 .welcome-panel {
     min-height: 25rem;
-    background-color: @eduspeak-base-pink;
+    background-color: @eduspeak-base-purple;
     color: white;
     text-align: center;
     padding-top: 5rem;
