--- a/app/Resources/views/default/index.html.twig
+++ b/app/Resources/views/default/index.html.twig
@@ -153,15 +153,15 @@
     <div class="carousel-caption">
       <p class="slogan">Pratiquez comme si vous y étiez</p>
       <div class="col-md-12">
-        <div class="col-md-6 col-md-offset-3">
+        <div class="col-md-6 col-xs-6 col-md-offset-3 col-xs-offset-3">
       <a class="btn btn-default btn-block btn-lg btn-edu btn-facebook" href="/app.php/login/facebook">
         <i class="fa fa-facebook-official"></i> Login with facebook
       </a>
       </div>
-      <div class="col-md-3 col-md-offset-3">
+      <div class="col-md-3 col-xs-3 col-md-offset-3 col-xs-offset-3">
           <a class="btn-default btn btn-edu btn-block btn-lg btn-accueil" href="{{ path('fos_user_security_login') }}">{{ 'layout.login'|trans({}, 'FOSUserBundle') }}</a>
 </div>
-      <div class="col-md-3">
+      <div class="col-md-3 col-xs-3">
           <a class="btn-default btn btn-edu btn-block btn-lg btn-accueil btn-accueil-2" href="{{ path('fos_user_registration_register') }}" role="button">Register</a>
           </div>
       </div>
