--- a/web/front/less/eduspeak/discussion.less
+++ b/web/front/less/eduspeak/discussion.less
@@ -52,7 +52,6 @@
             background: transparent;
             border: none;
             height: 70vh;
-            padding: 0 7em 0 7em;
             .panel-body {
                 height: 70vh;
                 overflow-y: auto;
@@ -95,6 +94,18 @@
             a:hover{
                 cursor: pointer;
                 text-decoration: none;
+            }
+        }
+
+        #display-div{
+            float: right;
+            position: absolute;
+            right: 1.5em;
+            bottom: 0;
+        }
+        #video-out{
+            video{
+                width: 100%;
             }
         }
     }
