--- a/web/front/less/bootstrap.less
+++ b/web/front/less/bootstrap.less
@@ -68,3 +68,4 @@
 @import "eduspeak/register.less";
 @import "eduspeak/friends.less";
 @import "eduspeak/porte.less";
+@import "eduspeak/algolia.less";
