--- a/src/ChatBundle/Resources/views/Discussion/discussion.html.twig
+++ b/src/ChatBundle/Resources/views/Discussion/discussion.html.twig
@@ -39,6 +39,7 @@
                         <a class="participant-snippet">
                             {% for participant in discussion.participants %}
                                 {% if participant.username != app.user.username %}
+                                 <a href="{{path('edu_speak_profil',{'id':participant.id})}}">
                                     {% if participant.facebookPicture %}
                                         <img class="profile-picture" src="{{ participant.facebookPicture }}" alt="Profil" />
                                     {% elseif participant.file %}
@@ -46,7 +47,10 @@
                                     {% else %}
                                         <i class="fa fa-user fa-3x"></i>
                                     {% endif %}
+                                </a>
+                                <a href="{{path('edu_speak_profil',{'id':participant.id})}}">
                                     <span>{{participant.username}}</span>
+                                </a>
                                 {% endif %}
                             {% endfor %}
                         </a>
