--- a/src/EduSpeakBundle/Resources/views/Match/match.html.twig
+++ b/src/EduSpeakBundle/Resources/views/Match/match.html.twig
@@ -5,30 +5,23 @@
     <div class="row filtres">
         <form >
             <div class="col-md-2 col-xs-2">
-                <select class="form-control" name="Langues">
-                    <option>Langues</option>
-                    <option>2</option>
-                    <option>3</option>
-                    <option>4</option>
-                    <option>5</option>
+                <select class="form-control" name="learnLanguages">
+                    {% for learnLanguage in learnLanguages %}
+                    <option value="{{ learnLanguage.id }}">{{ learnLanguage.name }}</option>
+                    {% endfor %}
                 </select>
             </div>
             <div class="col-md-2 col-xs-2">
-                <select class="form-control" placeholder="Age min">
-                    <option>Age min</option>
-                    <option>2</option>
-                    <option>3</option>
-                    <option>4</option>
-                    <option>5</option>
+                <select class="form-control" name="spokenLanguages">
+                    {% for spokenLanguage in spokenLanguages %}
+                    <option value="{{ spokenLanguage.id }}">{{ spokenLanguage.name }}</option>
+                    {% endfor %}
                 </select>
-            </div> <div class="col-md-2 col-xs-2">
-                <select class="form-control" placeholder="Age min">
-                    <option>Age max</option>
-                    <option>2</option>
-                    <option>3</option>
-                    <option>4</option>
-                    <option>5</option>
-                </select>
+            </div>
+            <div class="col-md-2 col-xs-2">
+                Age <b>{{ ageMin }}</b>
+                <input id="age" type="text" class="span2" value="" data-slider-min="{{ ageMin }}" data-slider-max="{{ ageMax }}" data-slider-step="1" data-slider-value="[{{ ageMin }},{{ ageMax }}]"/>
+                <b>{{ ageMax }}</b>
             </div>
             <div class="col-md-3 col-xs-3">
                 <div class="checkbox">
@@ -36,11 +29,6 @@
                         <input type="checkbox"> Correspondants connectés
                     </label>
                 </div>
-            </div>
-            <div class="col-md-1 col-xs-1">
-                <button class="btn btn-default" type="button" data-toggle="collapse" data-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
-                    <i class="fa fa-chevron-down"></i>
-                </button>
             </div>
             <div class="col-md-2 col-xs-2">
                 <button type="submit" class="btn btn-edu">Appliquer les filtres</button>
@@ -52,59 +40,8 @@
     </div>
 
     <div class="row content">
-        <!------------ ACTUALITES -------------->
-        <div class="col-md-3 col-xs-4 list-actus">
-            <h5>Actualités</h5>
-            <ul class="list-group">
-                <li class="list-group-item">
-                    <div class="actu">
-                        <img src="http://olapaella.fr/images/4eab1e_ec576404d1cf47c6bd1e0dd243cfcd4d.jpg" alt="image" height="110px" width="100%">
-                        <div class="like col-md-6 col-xs-10 col-md-offset-2 col-xs-offset-2">
-                            <div class="">
-                                <button type="submit" class="btn btn-link"><i class="fa fa-heart fa-3x fa-inverse "></i></button>
-                                <button type="submit" class="btn btn-link"><i class="fa fa-times fa-3x fa-inverse"></i></button>
-                            </div>
-                        </div>
-                    </div>
-                </li>
-                <li class="list-group-item">
-                    <div class="actu">
-                        <img src="https://i.ytimg.com/vi/KKUeZegmFRI/maxresdefault.jpg" alt="image" height="110px" width="100%">
-                        <div class="like col-md-6 col-xs-10 col-md-offset-2 col-xs-offset-2">
-                            <div class="">
-                                <button type="submit" class="btn btn-link"><i class="fa fa-heart fa-3x fa-inverse "></i></button>
-                                <button type="submit" class="btn btn-link"><i class="fa fa-times fa-3x fa-inverse"></i></button>
-                            </div>
-                        </div>
-                    </div>
-                </li>
-                <li class="list-group-item">
-                    <div class="actu">
-                        <img src="http://img0.ndsstatic.com/wallpapers/cb278f0eb987d32045e94097bb69ce45_large.jpeg" alt="image" height="110px" width="100%">
-                        <div class="like col-md-6 col-xs-10 col-md-offset-2 col-xs-offset-2">
-                            <div class="">
-                                <button type="submit" class="btn btn-link"><i class="fa fa-heart fa-3x fa-inverse "></i></button>
-                                <button type="submit" class="btn btn-link"><i class="fa fa-times fa-3x fa-inverse"></i></button>
-                            </div>
-                        </div>
-                    </div>
-                </li>
-                <li class="list-group-item">
-                    <div class="actu">
-                        <img src="http://www.realmadrid.com/cs/Satellite?blobcol=urldata&blobheader=image%2Fjpeg&blobkey=id&blobtable=MungoBlobs&blobwhere=1203345194876&ssbinary=true" alt="image" height="110px" width="100%">
-                        <div class="like col-md-6 col-xs-10 col-md-offset-2 col-xs-offset-2">
-                            <div class="">
-                                <button type="submit" class="btn btn-link"><i class="fa fa-heart fa-3x fa-inverse "></i></button>
-                                <button type="submit" class="btn btn-link"><i class="fa fa-times fa-3x fa-inverse"></i></button>
-                            </div>
-                        </div>
-                    </div>
-                </li>
-            </ul>
-        </div>
-
-        <!------------ FRIENDS -------------->
-    {% if matchedUsers is defined %}
+        <h1 style="text-align: center">{{ city.countryCity }}</h1>
+        {% if matchedUsers is defined %}
         <div class="col-md-9 col-xs-8 list-friends">
             <div class="row">
                 <div class="col-md-12 col-xs-12">
@@ -120,7 +57,7 @@
                                     {% else %}
                                         <i class="fa fa-user fa-3x"></i>
                                     {% endif %}
-                                </a>
+                                    </a>
                                 </div>
                                 <div class="user-infos col-md-10 col-xs-8">
                                     <h4>{{ matchedUser.username }}</h4>
