New mixpanel tracking

--- a/app/Resources/FOSUserBundle/views/Registration/register_content.html.twig
+++ b/app/Resources/FOSUserBundle/views/Registration/register_content.html.twig
@@ -17,5 +17,9 @@
 </div>
 
 <script>
-  mixpanel.track("Register Start");
+    if(window.location.hostname !== 'localhost'){
+        mixpanel.track("Register Start");
+    }else{
+        console.log("fake mixpanel localhost");
+    }
 </script>
