--- a/app/Resources/FOSUserBundle/views/Profile/show_content.html.twig
+++ b/app/Resources/FOSUserBundle/views/Profile/show_content.html.twig
@@ -138,3 +138,10 @@
         </div>
     </div>
 </div>
+<script>
+    if(window.location.hostname !== 'localhost'){
+        mixpanel.track("Profile "+{{user.username}});
+    }else{
+        console.log("fake mixpanel localhost");
+    }
+</script>
