--- a/app/Resources/FOSUserBundle/views/Security/login.html.twig
+++ b/app/Resources/FOSUserBundle/views/Security/login.html.twig
@@ -31,6 +31,12 @@
         </div>
       </div>
     </div> <!-- /container -->
-
+    <script>
+        if(window.location.hostname !== 'localhost'){
+            mixpanel.track("Login");
+        }else{
+            console.log("fake mixpanel localhost");
+        }
+    </script>
 </div>
 {% endblock fos_user_content %}
